update charts, API, everything, JPMS